tests/baselines/reference/emitArrowFunctionWhenUsingArguments13(alwaysstrict=true,target=es2015).errors.txt
emitArrowFunctionWhenUsingArguments13.ts(3,14): error TS1100: Invalid use of 'arguments' in strict mode.


==== emitArrowFunctionWhenUsingArguments13.ts (1 errors) ====
    function f() {
        var _arguments = 10;
        var a = (arguments) => () => _arguments;
                 ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    }